--- a/Test/MainPage.xaml
+++ b/Test/MainPage.xaml
@@ -32,6 +32,7 @@
             <ProgressBar x:Name="Progress" Margin="8,0,8,0" Height="10" />
             <ListBox x:Name="InfoList" FontSize="28" Margin="20"/>
             <Button x:Name="IndexButton" Content="Index" Click="IndexButton_Click"/>
+            <Button x:Name="ReadIndexButton" Content="Read Index" Click="ReadIndexButton_Click"/>
         </StackPanel>
     </Grid>
  
